--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>电子商城</title>
+    <title>锤子商城</title>
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <meta name="wap-font-scale" content="no">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
